[gd_scene load_steps=24 format=3 uid="uid://bwgtrk8je4es6"]

[ext_resource type="Texture2D" uid="uid://pucgh0qbmij" path="res://assets/Bg.png" id="1_nmwho"]
[ext_resource type="Script" path="res://scenes/main.gd" id="2_2vu7i"]
[ext_resource type="FontFile" uid="uid://cwd1tkm36irny" path="res://assets/pixel_font.ttf" id="2_4g85s"]
[ext_resource type="PackedScene" uid="uid://b1tvo8c6klabx" path="res://ui.tscn" id="3_e105d"]
[ext_resource type="Script" path="res://scenes/Ball.gd" id="4_18rf6"]
[ext_resource type="Script" path="res://scenes/hay_bail_2.gd" id="5_faruf"]
[ext_resource type="Script" path="res://scenes/character_body_2d.gd" id="5_ktddo"]
[ext_resource type="Script" path="res://scenes/louie.gd" id="6_ywhtm"]
[ext_resource type="Texture2D" uid="uid://qdh3yjh8ne88" path="res://assets/SpringDown.png" id="7_fc00b"]
[ext_resource type="Texture2D" uid="uid://4rvgy75v4a7e" path="res://assets/HaybaleStationary.png" id="7_j3wml"]
[ext_resource type="Texture2D" uid="uid://cqtsvde61ffol" path="res://assets/Louie.png" id="7_s1a3i"]
[ext_resource type="Texture2D" uid="uid://loxq1rt5cxq" path="res://assets/Barn.png" id="9_wn6j5"]
[ext_resource type="Texture2D" uid="uid://c8c1tun64ja52" path="res://assets/BlueSpringDown.png" id="12_o8mfc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_croqj"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4i124"]
size = Vector2(51.9999, 647.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_05tcc"]
size = Vector2(1152, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1hrul"]
size = Vector2(1152, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_do6y7"]
size = Vector2(84, 40.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c4tg8"]
size = Vector2(84, 42.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_obsrk"]
size = Vector2(83, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5r8ph"]
size = Vector2(1141, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l377s"]
size = Vector2(103, 61.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fvqhn"]
size = Vector2(174, 242)

[node name="Main" type="Sprite2D"]
texture_filter = 1
position = Vector2(2, 9)
texture = ExtResource("1_nmwho")
centered = false
script = ExtResource("2_2vu7i")

[node name="mainGameScreen" type="Node2D" parent="."]
visible = false

[node name="Ball" type="CharacterBody2D" parent="mainGameScreen"]
position = Vector2(576, 324)
collision_mask = 3
script = ExtResource("4_18rf6")

[node name="ColorRect" type="ColorRect" parent="mainGameScreen/Ball"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 395.0
offset_top = 348.0
offset_right = 405.0
offset_bottom = 358.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="mainGameScreen/Ball"]
position = Vector2(375, 339)
shape = SubResource("RectangleShape2D_croqj")

[node name="WallLeft" type="Area2D" parent="mainGameScreen"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mainGameScreen/WallLeft"]
position = Vector2(-26, 324)
shape = SubResource("RectangleShape2D_4i124")

[node name="WallRight" type="Area2D" parent="mainGameScreen"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mainGameScreen/WallRight"]
position = Vector2(1184, 324)
shape = SubResource("RectangleShape2D_4i124")

[node name="Hud" type="CanvasLayer" parent="mainGameScreen"]
visible = false

[node name="PlayerScore" type="Label" parent="mainGameScreen/Hud"]
offset_left = 450.0
offset_top = 202.0
offset_right = 500.0
offset_bottom = 255.0
theme_override_fonts/font = ExtResource("2_4g85s")
theme_override_font_sizes/font_size = 50
text = "3"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CPUScore" type="Label" parent="mainGameScreen/Hud"]
offset_left = 715.0
offset_top = 202.0
offset_right = 765.0
offset_bottom = 255.0
theme_override_fonts/font = ExtResource("2_4g85s")
theme_override_font_sizes/font_size = 50
text = "3"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Borders" type="StaticBody2D" parent="mainGameScreen"]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="mainGameScreen/Borders"]
position = Vector2(576, -32)
shape = SubResource("RectangleShape2D_05tcc")

[node name="Bottom" type="CollisionShape2D" parent="mainGameScreen/Borders"]
position = Vector2(576, 676)
shape = SubResource("RectangleShape2D_1hrul")

[node name="BallTimer" type="Timer" parent="mainGameScreen"]
one_shot = true
autostart = true

[node name="HayBail2" type="CharacterBody2D" parent="mainGameScreen"]
position = Vector2(431, 2)
script = ExtResource("5_faruf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="mainGameScreen/HayBail2"]
position = Vector2(362, 525)
shape = SubResource("RectangleShape2D_do6y7")

[node name="HayBailCollider" type="Area2D" parent="mainGameScreen/HayBail2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mainGameScreen/HayBail2/HayBailCollider"]
position = Vector2(360, 524.625)
shape = SubResource("RectangleShape2D_c4tg8")

[node name="Area2D" type="Area2D" parent="mainGameScreen/HayBail2"]
position = Vector2(359, 521)

[node name="CollisionShape2D" type="CollisionShape2D" parent="mainGameScreen/HayBail2/Area2D"]
position = Vector2(0.25, 18.75)
shape = SubResource("RectangleShape2D_obsrk")

[node name="Sprite2D" type="Sprite2D" parent="mainGameScreen/HayBail2"]
position = Vector2(359, 527)
scale = Vector2(0.88, 0.88)
texture = ExtResource("7_j3wml")

[node name="HayBail1" type="CharacterBody2D" parent="mainGameScreen"]
position = Vector2(0, 2)
script = ExtResource("5_ktddo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="mainGameScreen/HayBail1"]
position = Vector2(356, 523)
shape = SubResource("RectangleShape2D_do6y7")

[node name="HayBailCollider" type="Area2D" parent="mainGameScreen/HayBail1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mainGameScreen/HayBail1/HayBailCollider"]
position = Vector2(356, 521)
shape = SubResource("RectangleShape2D_c4tg8")

[node name="Area2D" type="Area2D" parent="mainGameScreen/HayBail1"]
position = Vector2(359, 521)

[node name="CollisionShape2D" type="CollisionShape2D" parent="mainGameScreen/HayBail1/Area2D"]
position = Vector2(-2.5, 18.5)
shape = SubResource("RectangleShape2D_obsrk")

[node name="Sprite2D" type="Sprite2D" parent="mainGameScreen/HayBail1"]
position = Vector2(356, 527)
scale = Vector2(0.88, 0.88)
texture = ExtResource("7_j3wml")

[node name="StaticBody2D" type="StaticBody2D" parent="mainGameScreen"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mainGameScreen/StaticBody2D"]
position = Vector2(575, 563)
shape = SubResource("RectangleShape2D_5r8ph")

[node name="Louie" type="CharacterBody2D" parent="mainGameScreen"]
script = ExtResource("6_ywhtm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="mainGameScreen/Louie"]
position = Vector2(577, 179)
shape = SubResource("RectangleShape2D_l377s")

[node name="LouieSprite" type="Sprite2D" parent="mainGameScreen/Louie"]
position = Vector2(576, 178)
texture = ExtResource("7_s1a3i")

[node name="Coop2" type="CharacterBody2D" parent="mainGameScreen"]
position = Vector2(949, 407)

[node name="Coop2Area" type="Area2D" parent="mainGameScreen/Coop2"]
position = Vector2(9, 17)

[node name="CollisionShape2D" type="CollisionShape2D" parent="mainGameScreen/Coop2/Coop2Area"]
position = Vector2(38, 103)
shape = SubResource("RectangleShape2D_fvqhn")

[node name="Sprite2D" type="Sprite2D" parent="mainGameScreen/Coop2/Coop2Area/CollisionShape2D"]
position = Vector2(4.51715, -28.5)
scale = Vector2(0.187835, 0.201772)
texture = ExtResource("9_wn6j5")

[node name="Coop1" type="CharacterBody2D" parent="mainGameScreen"]
position = Vector2(83, 401)

[node name="Coop1Area" type="Area2D" parent="mainGameScreen/Coop1"]
position = Vector2(0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="mainGameScreen/Coop1/Coop1Area"]
position = Vector2(56, 118)
shape = SubResource("RectangleShape2D_fvqhn")

[node name="Sprite2D" type="Sprite2D" parent="mainGameScreen/Coop1/Coop1Area/CollisionShape2D"]
position = Vector2(2.94037, -24.0625)
scale = Vector2(0.186804, 0.200664)
texture = ExtResource("9_wn6j5")

[node name="Spring" type="Sprite2D" parent="mainGameScreen"]
show_behind_parent = true
position = Vector2(356, 536)
scale = Vector2(0.585, 0.585)
texture = ExtResource("7_fc00b")

[node name="Spring2" type="Sprite2D" parent="mainGameScreen"]
show_behind_parent = true
position = Vector2(791, 536)
scale = Vector2(0.585, 0.585)
texture = ExtResource("12_o8mfc")

[node name="UI" parent="." instance=ExtResource("3_e105d")]

[connection signal="body_entered" from="mainGameScreen/WallLeft" to="." method="_on_wall_left_hit"]
[connection signal="body_entered" from="mainGameScreen/WallRight" to="." method="_on_wall_right_hit"]
[connection signal="timeout" from="mainGameScreen/BallTimer" to="." method="_on_ball_timer_timeout"]
[connection signal="body_entered" from="mainGameScreen/HayBail2/HayBailCollider" to="." method="_on_hay_bail_collider_body_entered"]
[connection signal="body_entered" from="mainGameScreen/HayBail2/HayBailCollider" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="mainGameScreen/HayBail2/Area2D" to="." method="_on_Louie_hit_bottom"]
[connection signal="body_entered" from="mainGameScreen/HayBail1/HayBailCollider" to="." method="_on_hay_bail_collider_body_entered"]
[connection signal="body_entered" from="mainGameScreen/HayBail1/HayBailCollider" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="mainGameScreen/HayBail1/Area2D" to="." method="_on_Louie_hit_bottom"]
[connection signal="child_entered_tree" from="mainGameScreen/Coop2" to="." method="_on_coop_1_child_entered_tree"]
[connection signal="body_entered" from="mainGameScreen/Coop2/Coop2Area" to="." method="_on_coop_2_area_body_entered"]
[connection signal="child_entered_tree" from="mainGameScreen/Coop1" to="." method="_on_coop_1_child_entered_tree"]
[connection signal="body_entered" from="mainGameScreen/Coop1/Coop1Area" to="." method="_on_coop_1_area_body_entered"]
